@@ -1,3 +1,7 @@
+2010-08-30  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Fixed issue #9481: viewhelper CurrentResultNumber doesn't respect selected number, credits Rik Willems
+
 2010-08-25  Markus Goldbach <markus.goldbach@dkd.de>
 
 	* Added ISOLatin mapping to scheam.xml
